# dotfiles

./: .gitignore  .pre-commit-config.yaml  Brewfile  CLAUDE.md  LICENSE  README.md  dotfiles.code-workspace  gitconfig  install.conf.yaml  install_fonts  install_fonts.zsh  pyproject.toml  requirements.txt  screenrc  setup_homebrew.zsh  vimrc  zshenv  zshrc
.github/workflows/: pytest.yml
apps/BetterMouse/: better_mouse_cfg.plist
apps/Terminal/: Pro.terminal
apps/bash/: bashrc
apps/homebrew/: Brewfile
apps/vim/: vimrc
apps/zsh/: install_font  zprofile  zshrc
apps/zsh/zfuncs/: _poetry
macos/: .zshrc
tests/: test_zshrc.py
tests/zsh/: test_install_font.py  test_zshrc.py
